# XMLDriven-Diagram-Understanding

./: .gitattributes  Pipfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: diagram.xlsx
src/: main.py
src/scripts/: w_img.py  w_xml.py
src/utils/: arguments.py
