[project]
name = "xml-driven-diagram-understanding"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "langchain-openai==0.3.3",
    "langchain-core==0.3.33",
    "langgraph==0.2.68",
    "python-dotenv==1.0.1",
    "easydict==1.13",
    "spreadsheet-intelligence>=0.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2"
]
